--- a/index.html
+++ b/index.html
@@ -3,20 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tailwind CDN -->
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <!-- Googler Fond CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <!-- Font Awsome CDN-->
+    <script src="https://kit.fontawesome.com/c5d21aae6b.js" crossorigin="anonymous"></script>
+
     <title>Tea House</title>
 </head>
 <body>
-    <header>
-        Hello World
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-20">
+        <header class="flex pt-10 mb-20">
+            <!-- Header text -->
+             <div>
+                <h1 class="text-5xl md:text-7xl">It's good <br> tea time at The <br> Tea House</h1>
+                <br>
+                <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <br>
+                <button class="h-14 bg-linear-to-r from-orange-500 to-red-500 rounded-lg px-5 py-3 text-white font-bold ">Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+                
+             </div>
+             <!-- Header Image -->
+            <div class="relative">
+                <div>
+                    <img class="w-full" src="./images/banner.png" alt="">
 
-    </header>
+                </div>
+                <!-- Ratttings Icon card" -->
+                <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md-left:32 lg-left:28">
+                    <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                    <div class="ml-2">
+                        <h2 class="lg:text-2xl font-bold">5.00</h2>
+                        <p class="text-gray-500">Trust Pilot Rattings</p>
+                    </div>
+                </div>
+            </div>
 
-    <main>
+
+
+       
+
+        </header>
 
 
     </main>
