--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <main class="max-w-screen-xl mx-auto px-16 lg:px-20">
-        <header class="flex pt-10 mb-20">
+        <header class="lg:flex pt-10 mb-20">
             <!-- Header text -->
              <div>
                 <h1 class="text-5xl md:text-7xl">It's good <br> tea time at The <br> Tea House</h1>
@@ -47,6 +47,39 @@
        
 
         </header>
+
+        <!-- Featured product section -->
+         <section class="py-8 lg:py-24">
+            <!-- Featured Title -->
+            <div class="text-center ">
+                <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
+                <p class="text-gray-600 max-w-3xl mx-auto mb-5">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+                </p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 text-center">
+                <div class="rounded-lg bg-gray-100 shadow-lg overflow-hidden">
+                    <img class="mx-auto pt-4" src="./images/tea-1.png " alt=""><br>
+                    <h2 class="text-center font-bold">Milk Tea</h2> <br>
+                    <p class="text-center text-gray-400 px-5">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="rounded-lg bg-gray-100 shadow-lg overflow-hidden">
+                    <img class="mx-auto pt-4" src="./images/tea-2.png" alt=""><br>
+                    <h2 class="text-center font-bold">Black Tea</h2> <br>
+                    <p class="text-center text-gray-400 px-5">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="rounded-lg bg-gray-100 shadow-lg overflow-hidden">
+                    <img class="mx-auto pt-4" src="./images/tea-3.png" alt=""><br>
+                    <h2 class="text-center font-bold">Lemon Tea</h2> <br>
+                    <p class="text-center text-gray-400 px-5">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="rounded-lg bg-gray-100 shadow-lg overflow-hidden">
+                    <img class="mx-auto pt-4" src="./images/tea-4.png" alt=""><br>
+                    <h2 class="text-center font-bold">Green Tea</h2> <br>
+                    <p class="text-center text-gray-400 px-5">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+         </section>
 
 
     </main>
